APIs/netboxdemo.com/2.4/java-client/README.md
# openapi-java-client

NetBox API
- API version: 2.4
  - Build date: 2024-10-12T11:29:46.515038-04:00[America/New_York]
  - Generator version: 7.9.0

API to access NetBox


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>2.4</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:2.4"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-2.4.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.CircuitsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://netboxdemo.com/api");
    
    // Configure API key authorization: Bearer
    ApiKeyAuth Bearer = (ApiKeyAuth) defaultClient.getAuthentication("Bearer");
    Bearer.setApiKey("YOUR API KEY");
    // Uncomment the following line to set a prefix for the API key, e.g. "Token" (defaults to null)
    //Bearer.setApiKeyPrefix("Token");

    CircuitsApi apiInstance = new CircuitsApi(defaultClient);
    try {
      apiInstance.circuitsChoicesList();
    } catch (ApiException e) {
      System.err.println("Exception when calling CircuitsApi#circuitsChoicesList");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *http://netboxdemo.com/api*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CircuitsApi* | [**circuitsChoicesList**](docs/CircuitsApi.md#circuitsChoicesList) | **GET** /circuits/_choices/ | 
*CircuitsApi* | [**circuitsChoicesRead**](docs/CircuitsApi.md#circuitsChoicesRead) | **GET** /circuits/_choices/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsCreate**](docs/CircuitsApi.md#circuitsCircuitTerminationsCreate) | **POST** /circuits/circuit-terminations/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsDelete**](docs/CircuitsApi.md#circuitsCircuitTerminationsDelete) | **DELETE** /circuits/circuit-terminations/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsList**](docs/CircuitsApi.md#circuitsCircuitTerminationsList) | **GET** /circuits/circuit-terminations/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitTerminationsPartialUpdate) | **PATCH** /circuits/circuit-terminations/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsRead**](docs/CircuitsApi.md#circuitsCircuitTerminationsRead) | **GET** /circuits/circuit-terminations/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTerminationsUpdate**](docs/CircuitsApi.md#circuitsCircuitTerminationsUpdate) | **PUT** /circuits/circuit-terminations/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTypesCreate**](docs/CircuitsApi.md#circuitsCircuitTypesCreate) | **POST** /circuits/circuit-types/ | 
*CircuitsApi* | [**circuitsCircuitTypesDelete**](docs/CircuitsApi.md#circuitsCircuitTypesDelete) | **DELETE** /circuits/circuit-types/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTypesList**](docs/CircuitsApi.md#circuitsCircuitTypesList) | **GET** /circuits/circuit-types/ | 
*CircuitsApi* | [**circuitsCircuitTypesPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitTypesPartialUpdate) | **PATCH** /circuits/circuit-types/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTypesRead**](docs/CircuitsApi.md#circuitsCircuitTypesRead) | **GET** /circuits/circuit-types/{id}/ | 
*CircuitsApi* | [**circuitsCircuitTypesUpdate**](docs/CircuitsApi.md#circuitsCircuitTypesUpdate) | **PUT** /circuits/circuit-types/{id}/ | 
*CircuitsApi* | [**circuitsCircuitsCreate**](docs/CircuitsApi.md#circuitsCircuitsCreate) | **POST** /circuits/circuits/ | 
*CircuitsApi* | [**circuitsCircuitsDelete**](docs/CircuitsApi.md#circuitsCircuitsDelete) | **DELETE** /circuits/circuits/{id}/ | 
*CircuitsApi* | [**circuitsCircuitsList**](docs/CircuitsApi.md#circuitsCircuitsList) | **GET** /circuits/circuits/ | 
*CircuitsApi* | [**circuitsCircuitsPartialUpdate**](docs/CircuitsApi.md#circuitsCircuitsPartialUpdate) | **PATCH** /circuits/circuits/{id}/ | 
*CircuitsApi* | [**circuitsCircuitsRead**](docs/CircuitsApi.md#circuitsCircuitsRead) | **GET** /circuits/circuits/{id}/ | 
*CircuitsApi* | [**circuitsCircuitsUpdate**](docs/CircuitsApi.md#circuitsCircuitsUpdate) | **PUT** /circuits/circuits/{id}/ | 
*CircuitsApi* | [**circuitsProvidersCreate**](docs/CircuitsApi.md#circuitsProvidersCreate) | **POST** /circuits/providers/ | 
*CircuitsApi* | [**circuitsProvidersDelete**](docs/CircuitsApi.md#circuitsProvidersDelete) | **DELETE** /circuits/providers/{id}/ | 
*CircuitsApi* | [**circuitsProvidersGraphs**](docs/CircuitsApi.md#circuitsProvidersGraphs) | **GET** /circuits/providers/{id}/graphs/ | 
*CircuitsApi* | [**circuitsProvidersList**](docs/CircuitsApi.md#circuitsProvidersList) | **GET** /circuits/providers/ | 
*CircuitsApi* | [**circuitsProvidersPartialUpdate**](docs/CircuitsApi.md#circuitsProvidersPartialUpdate) | **PATCH** /circuits/providers/{id}/ | 
*CircuitsApi* | [**circuitsProvidersRead**](docs/CircuitsApi.md#circuitsProvidersRead) | **GET** /circuits/providers/{id}/ | 
*CircuitsApi* | [**circuitsProvidersUpdate**](docs/CircuitsApi.md#circuitsProvidersUpdate) | **PUT** /circuits/providers/{id}/ | 
*DcimApi* | [**dcimChoicesList**](docs/DcimApi.md#dcimChoicesList) | **GET** /dcim/_choices/ | 
*DcimApi* | [**dcimChoicesRead**](docs/DcimApi.md#dcimChoicesRead) | **GET** /dcim/_choices/{id}/ | 
*DcimApi* | [**dcimConnectedDeviceList**](docs/DcimApi.md#dcimConnectedDeviceList) | **GET** /dcim/connected-device/ | 
*DcimApi* | [**dcimConsoleConnectionsList**](docs/DcimApi.md#dcimConsoleConnectionsList) | **GET** /dcim/console-connections/ | 
*DcimApi* | [**dcimConsolePortTemplatesCreate**](docs/DcimApi.md#dcimConsolePortTemplatesCreate) | **POST** /dcim/console-port-templates/ | 
*DcimApi* | [**dcimConsolePortTemplatesDelete**](docs/DcimApi.md#dcimConsolePortTemplatesDelete) | **DELETE** /dcim/console-port-templates/{id}/ | 
*DcimApi* | [**dcimConsolePortTemplatesList**](docs/DcimApi.md#dcimConsolePortTemplatesList) | **GET** /dcim/console-port-templates/ | 
*DcimApi* | [**dcimConsolePortTemplatesPartialUpdate**](docs/DcimApi.md#dcimConsolePortTemplatesPartialUpdate) | **PATCH** /dcim/console-port-templates/{id}/ | 
*DcimApi* | [**dcimConsolePortTemplatesRead**](docs/DcimApi.md#dcimConsolePortTemplatesRead) | **GET** /dcim/console-port-templates/{id}/ | 
*DcimApi* | [**dcimConsolePortTemplatesUpdate**](docs/DcimApi.md#dcimConsolePortTemplatesUpdate) | **PUT** /dcim/console-port-templates/{id}/ | 
*DcimApi* | [**dcimConsolePortsCreate**](docs/DcimApi.md#dcimConsolePortsCreate) | **POST** /dcim/console-ports/ | 
*DcimApi* | [**dcimConsolePortsDelete**](docs/DcimApi.md#dcimConsolePortsDelete) | **DELETE** /dcim/console-ports/{id}/ | 
*DcimApi* | [**dcimConsolePortsList**](docs/DcimApi.md#dcimConsolePortsList) | **GET** /dcim/console-ports/ | 
*DcimApi* | [**dcimConsolePortsPartialUpdate**](docs/DcimApi.md#dcimConsolePortsPartialUpdate) | **PATCH** /dcim/console-ports/{id}/ | 
*DcimApi* | [**dcimConsolePortsRead**](docs/DcimApi.md#dcimConsolePortsRead) | **GET** /dcim/console-ports/{id}/ | 
*DcimApi* | [**dcimConsolePortsUpdate**](docs/DcimApi.md#dcimConsolePortsUpdate) | **PUT** /dcim/console-ports/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesCreate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesCreate) | **POST** /dcim/console-server-port-templates/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesDelete**](docs/DcimApi.md#dcimConsoleServerPortTemplatesDelete) | **DELETE** /dcim/console-server-port-templates/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesList**](docs/DcimApi.md#dcimConsoleServerPortTemplatesList) | **GET** /dcim/console-server-port-templates/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesPartialUpdate) | **PATCH** /dcim/console-server-port-templates/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesRead**](docs/DcimApi.md#dcimConsoleServerPortTemplatesRead) | **GET** /dcim/console-server-port-templates/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortTemplatesUpdate**](docs/DcimApi.md#dcimConsoleServerPortTemplatesUpdate) | **PUT** /dcim/console-server-port-templates/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortsCreate**](docs/DcimApi.md#dcimConsoleServerPortsCreate) | **POST** /dcim/console-server-ports/ | 
*DcimApi* | [**dcimConsoleServerPortsDelete**](docs/DcimApi.md#dcimConsoleServerPortsDelete) | **DELETE** /dcim/console-server-ports/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortsList**](docs/DcimApi.md#dcimConsoleServerPortsList) | **GET** /dcim/console-server-ports/ | 
*DcimApi* | [**dcimConsoleServerPortsPartialUpdate**](docs/DcimApi.md#dcimConsoleServerPortsPartialUpdate) | **PATCH** /dcim/console-server-ports/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortsRead**](docs/DcimApi.md#dcimConsoleServerPortsRead) | **GET** /dcim/console-server-ports/{id}/ | 
*DcimApi* | [**dcimConsoleServerPortsUpdate**](docs/DcimApi.md#dcimConsoleServerPortsUpdate) | **PUT** /dcim/console-server-ports/{id}/ | 
*DcimApi* | [**dcimDeviceBayTemplatesCreate**](docs/DcimApi.md#dcimDeviceBayTemplatesCreate) | **POST** /dcim/device-bay-templates/ | 
*DcimApi* | [**dcimDeviceBayTemplatesDelete**](docs/DcimApi.md#dcimDeviceBayTemplatesDelete) | **DELETE** /dcim/device-bay-templates/{id}/ | 
*DcimApi* | [**dcimDeviceBayTemplatesList**](docs/DcimApi.md#dcimDeviceBayTemplatesList) | **GET** /dcim/device-bay-templates/ | 
*DcimApi* | [**dcimDeviceBayTemplatesPartialUpdate**](docs/DcimApi.md#dcimDeviceBayTemplatesPartialUpdate) | **PATCH** /dcim/device-bay-templates/{id}/ | 
*DcimApi* | [**dcimDeviceBayTemplatesRead**](docs/DcimApi.md#dcimDeviceBayTemplatesRead) | **GET** /dcim/device-bay-templates/{id}/ | 
*DcimApi* | [**dcimDeviceBayTemplatesUpdate**](docs/DcimApi.md#dcimDeviceBayTemplatesUpdate) | **PUT** /dcim/device-bay-templates/{id}/ | 
*DcimApi* | [**dcimDeviceBaysCreate**](docs/DcimApi.md#dcimDeviceBaysCreate) | **POST** /dcim/device-bays/ | 
*DcimApi* | [**dcimDeviceBaysDelete**](docs/DcimApi.md#dcimDeviceBaysDelete) | **DELETE** /dcim/device-bays/{id}/ | 
*DcimApi* | [**dcimDeviceBaysList**](docs/DcimApi.md#dcimDeviceBaysList) | **GET** /dcim/device-bays/ | 
*DcimApi* | [**dcimDeviceBaysPartialUpdate**](docs/DcimApi.md#dcimDeviceBaysPartialUpdate) | **PATCH** /dcim/device-bays/{id}/ | 
*DcimApi* | [**dcimDeviceBaysRead**](docs/DcimApi.md#dcimDeviceBaysRead) | **GET** /dcim/device-bays/{id}/ | 
*DcimApi* | [**dcimDeviceBaysUpdate**](docs/DcimApi.md#dcimDeviceBaysUpdate) | **PUT** /dcim/device-bays/{id}/ | 
*DcimApi* | [**dcimDeviceRolesCreate**](docs/DcimApi.md#dcimDeviceRolesCreate) | **POST** /dcim/device-roles/ | 
*DcimApi* | [**dcimDeviceRolesDelete**](docs/DcimApi.md#dcimDeviceRolesDelete) | **DELETE** /dcim/device-roles/{id}/ | 
*DcimApi* | [**dcimDeviceRolesList**](docs/DcimApi.md#dcimDeviceRolesList) | **GET** /dcim/device-roles/ | 
*DcimApi* | [**dcimDeviceRolesPartialUpdate**](docs/DcimApi.md#dcimDeviceRolesPartialUpdate) | **PATCH** /dcim/device-roles/{id}/ | 
*DcimApi* | [**dcimDeviceRolesRead**](docs/DcimApi.md#dcimDeviceRolesRead) | **GET** /dcim/device-roles/{id}/ | 
*DcimApi* | [**dcimDeviceRolesUpdate**](docs/DcimApi.md#dcimDeviceRolesUpdate) | **PUT** /dcim/device-roles/{id}/ | 
*DcimApi* | [**dcimDeviceTypesCreate**](docs/DcimApi.md#dcimDeviceTypesCreate) | **POST** /dcim/device-types/ | 
*DcimApi* | [**dcimDeviceTypesDelete**](docs/DcimApi.md#dcimDeviceTypesDelete) | **DELETE** /dcim/device-types/{id}/ | 
*DcimApi* | [**dcimDeviceTypesList**](docs/DcimApi.md#dcimDeviceTypesList) | **GET** /dcim/device-types/ | 
*DcimApi* | [**dcimDeviceTypesPartialUpdate**](docs/DcimApi.md#dcimDeviceTypesPartialUpdate) | **PATCH** /dcim/device-types/{id}/ | 
*DcimApi* | [**dcimDeviceTypesRead**](docs/DcimApi.md#dcimDeviceTypesRead) | **GET** /dcim/device-types/{id}/ | 
*DcimApi* | [**dcimDeviceTypesUpdate**](docs/DcimApi.md#dcimDeviceTypesUpdate) | **PUT** /dcim/device-types/{id}/ | 
*DcimApi* | [**dcimDevicesCreate**](docs/DcimApi.md#dcimDevicesCreate) | **POST** /dcim/devices/ | 
*DcimApi* | [**dcimDevicesDelete**](docs/DcimApi.md#dcimDevicesDelete) | **DELETE** /dcim/devices/{id}/ | 
*DcimApi* | [**dcimDevicesList**](docs/DcimApi.md#dcimDevicesList) | **GET** /dcim/devices/ | 
*DcimApi* | [**dcimDevicesNapalm**](docs/DcimApi.md#dcimDevicesNapalm) | **GET** /dcim/devices/{id}/napalm/ | 
*DcimApi* | [**dcimDevicesPartialUpdate**](docs/DcimApi.md#dcimDevicesPartialUpdate) | **PATCH** /dcim/devices/{id}/ | 
*DcimApi* | [**dcimDevicesRead**](docs/DcimApi.md#dcimDevicesRead) | **GET** /dcim/devices/{id}/ | 
*DcimApi* | [**dcimDevicesUpdate**](docs/DcimApi.md#dcimDevicesUpdate) | **PUT** /dcim/devices/{id}/ | 
*DcimApi* | [**dcimInterfaceConnectionsCreate**](docs/DcimApi.md#dcimInterfaceConnectionsCreate) | **POST** /dcim/interface-connections/ | 
*DcimApi* | [**dcimInterfaceConnectionsDelete**](docs/DcimApi.md#dcimInterfaceConnectionsDelete) | **DELETE** /dcim/interface-connections/{id}/ | 
*DcimApi* | [**dcimInterfaceConnectionsList**](docs/DcimApi.md#dcimInterfaceConnectionsList) | **GET** /dcim/interface-connections/ | 
*DcimApi* | [**dcimInterfaceConnectionsPartialUpdate**](docs/DcimApi.md#dcimInterfaceConnectionsPartialUpdate) | **PATCH** /dcim/interface-connections/{id}/ | 
*DcimApi* | [**dcimInterfaceConnectionsRead**](docs/DcimApi.md#dcimInterfaceConnectionsRead) | **GET** /dcim/interface-connections/{id}/ | 
*DcimApi* | [**dcimInterfaceConnectionsUpdate**](docs/DcimApi.md#dcimInterfaceConnectionsUpdate) | **PUT** /dcim/interface-connections/{id}/ | 
*DcimApi* | [**dcimInterfaceTemplatesCreate**](docs/DcimApi.md#dcimInterfaceTemplatesCreate) | **POST** /dcim/interface-templates/ | 
*DcimApi* | [**dcimInterfaceTemplatesDelete**](docs/DcimApi.md#dcimInterfaceTemplatesDelete) | **DELETE** /dcim/interface-templates/{id}/ | 
*DcimApi* | [**dcimInterfaceTemplatesList**](docs/DcimApi.md#dcimInterfaceTemplatesList) | **GET** /dcim/interface-templates/ | 
*DcimApi* | [**dcimInterfaceTemplatesPartialUpdate**](docs/DcimApi.md#dcimInterfaceTemplatesPartialUpdate) | **PATCH** /dcim/interface-templates/{id}/ | 
*DcimApi* | [**dcimInterfaceTemplatesRead**](docs/DcimApi.md#dcimInterfaceTemplatesRead) | **GET** /dcim/interface-templates/{id}/ | 
*DcimApi* | [**dcimInterfaceTemplatesUpdate**](docs/DcimApi.md#dcimInterfaceTemplatesUpdate) | **PUT** /dcim/interface-templates/{id}/ | 
*DcimApi* | [**dcimInterfacesCreate**](docs/DcimApi.md#dcimInterfacesCreate) | **POST** /dcim/interfaces/ | 
*DcimApi* | [**dcimInterfacesDelete**](docs/DcimApi.md#dcimInterfacesDelete) | **DELETE** /dcim/interfaces/{id}/ | 
*DcimApi* | [**dcimInterfacesGraphs**](docs/DcimApi.md#dcimInterfacesGraphs) | **GET** /dcim/interfaces/{id}/graphs/ | 
*DcimApi* | [**dcimInterfacesList**](docs/DcimApi.md#dcimInterfacesList) | **GET** /dcim/interfaces/ | 
*DcimApi* | [**dcimInterfacesPartialUpdate**](docs/DcimApi.md#dcimInterfacesPartialUpdate) | **PATCH** /dcim/interfaces/{id}/ | 
*DcimApi* | [**dcimInterfacesRead**](docs/DcimApi.md#dcimInterfacesRead) | **GET** /dcim/interfaces/{id}/ | 
*DcimApi* | [**dcimInterfacesUpdate**](docs/DcimApi.md#dcimInterfacesUpdate) | **PUT** /dcim/interfaces/{id}/ | 
*DcimApi* | [**dcimInventoryItemsCreate**](docs/DcimApi.md#dcimInventoryItemsCreate) | **POST** /dcim/inventory-items/ | 
*DcimApi* | [**dcimInventoryItemsDelete**](docs/DcimApi.md#dcimInventoryItemsDelete) | **DELETE** /dcim/inventory-items/{id}/ | 
*DcimApi* | [**dcimInventoryItemsList**](docs/DcimApi.md#dcimInventoryItemsList) | **GET** /dcim/inventory-items/ | 
*DcimApi* | [**dcimInventoryItemsPartialUpdate**](docs/DcimApi.md#dcimInventoryItemsPartialUpdate) | **PATCH** /dcim/inventory-items/{id}/ | 
*DcimApi* | [**dcimInventoryItemsRead**](docs/DcimApi.md#dcimInventoryItemsRead) | **GET** /dcim/inventory-items/{id}/ | 
*DcimApi* | [**dcimInventoryItemsUpdate**](docs/DcimApi.md#dcimInventoryItemsUpdate) | **PUT** /dcim/inventory-items/{id}/ | 
*DcimApi* | [**dcimManufacturersCreate**](docs/DcimApi.md#dcimManufacturersCreate) | **POST** /dcim/manufacturers/ | 
*DcimApi* | [**dcimManufacturersDelete**](docs/DcimApi.md#dcimManufacturersDelete) | **DELETE** /dcim/manufacturers/{id}/ | 
*DcimApi* | [**dcimManufacturersList**](docs/DcimApi.md#dcimManufacturersList) | **GET** /dcim/manufacturers/ | 
*DcimApi* | [**dcimManufacturersPartialUpdate**](docs/DcimApi.md#dcimManufacturersPartialUpdate) | **PATCH** /dcim/manufacturers/{id}/ | 
*DcimApi* | [**dcimManufacturersRead**](docs/DcimApi.md#dcimManufacturersRead) | **GET** /dcim/manufacturers/{id}/ | 
*DcimApi* | [**dcimManufacturersUpdate**](docs/DcimApi.md#dcimManufacturersUpdate) | **PUT** /dcim/manufacturers/{id}/ | 
*DcimApi* | [**dcimPlatformsCreate**](docs/DcimApi.md#dcimPlatformsCreate) | **POST** /dcim/platforms/ | 
*DcimApi* | [**dcimPlatformsDelete**](docs/DcimApi.md#dcimPlatformsDelete) | **DELETE** /dcim/platforms/{id}/ | 
*DcimApi* | [**dcimPlatformsList**](docs/DcimApi.md#dcimPlatformsList) | **GET** /dcim/platforms/ | 
*DcimApi* | [**dcimPlatformsPartialUpdate**](docs/DcimApi.md#dcimPlatformsPartialUpdate) | **PATCH** /dcim/platforms/{id}/ | 
*DcimApi* | [**dcimPlatformsRead**](docs/DcimApi.md#dcimPlatformsRead) | **GET** /dcim/platforms/{id}/ | 
*DcimApi* | [**dcimPlatformsUpdate**](docs/DcimApi.md#dcimPlatformsUpdate) | **PUT** /dcim/platforms/{id}/ | 
*DcimApi* | [**dcimPowerConnectionsList**](docs/DcimApi.md#dcimPowerConnectionsList) | **GET** /dcim/power-connections/ | 
*DcimApi* | [**dcimPowerOutletTemplatesCreate**](docs/DcimApi.md#dcimPowerOutletTemplatesCreate) | **POST** /dcim/power-outlet-templates/ | 
*DcimApi* | [**dcimPowerOutletTemplatesDelete**](docs/DcimApi.md#dcimPowerOutletTemplatesDelete) | **DELETE** /dcim/power-outlet-templates/{id}/ | 
*DcimApi* | [**dcimPowerOutletTemplatesList**](docs/DcimApi.md#dcimPowerOutletTemplatesList) | **GET** /dcim/power-outlet-templates/ | 
*DcimApi* | [**dcimPowerOutletTemplatesPartialUpdate**](docs/DcimApi.md#dcimPowerOutletTemplatesPartialUpdate) | **PATCH** /dcim/power-outlet-templates/{id}/ | 
*DcimApi* | [**dcimPowerOutletTemplatesRead**](docs/DcimApi.md#dcimPowerOutletTemplatesRead) | **GET** /dcim/power-outlet-templates/{id}/ | 
*DcimApi* | [**dcimPowerOutletTemplatesUpdate**](docs/DcimApi.md#dcimPowerOutletTemplatesUpdate) | **PUT** /dcim/power-outlet-templates/{id}/ | 
*DcimApi* | [**dcimPowerOutletsCreate**](docs/DcimApi.md#dcimPowerOutletsCreate) | **POST** /dcim/power-outlets/ | 
*DcimApi* | [**dcimPowerOutletsDelete**](docs/DcimApi.md#dcimPowerOutletsDelete) | **DELETE** /dcim/power-outlets/{id}/ | 
*DcimApi* | [**dcimPowerOutletsList**](docs/DcimApi.md#dcimPowerOutletsList) | **GET** /dcim/power-outlets/ | 
*DcimApi* | [**dcimPowerOutletsPartialUpdate**](docs/DcimApi.md#dcimPowerOutletsPartialUpdate) | **PATCH** /dcim/power-outlets/{id}/ | 
*DcimApi* | [**dcimPowerOutletsRead**](docs/DcimApi.md#dcimPowerOutletsRead) | **GET** /dcim/power-outlets/{id}/ | 
*DcimApi* | [**dcimPowerOutletsUpdate**](docs/DcimApi.md#dcimPowerOutletsUpdate) | **PUT** /dcim/power-outlets/{id}/ | 
*DcimApi* | [**dcimPowerPortTemplatesCreate**](docs/DcimApi.md#dcimPowerPortTemplatesCreate) | **POST** /dcim/power-port-templates/ | 
*DcimApi* | [**dcimPowerPortTemplatesDelete**](docs/DcimApi.md#dcimPowerPortTemplatesDelete) | **DELETE** /dcim/power-port-templates/{id}/ | 
*DcimApi* | [**dcimPowerPortTemplatesList**](docs/DcimApi.md#dcimPowerPortTemplatesList) | **GET** /dcim/power-port-templates/ | 
*DcimApi* | [**dcimPowerPortTemplatesPartialUpdate**](docs/DcimApi.md#dcimPowerPortTemplatesPartialUpdate) | **PATCH** /dcim/power-port-templates/{id}/ | 
*DcimApi* | [**dcimPowerPortTemplatesRead**](docs/DcimApi.md#dcimPowerPortTemplatesRead) | **GET** /dcim/power-port-templates/{id}/ | 
*DcimApi* | [**dcimPowerPortTemplatesUpdate**](docs/DcimApi.md#dcimPowerPortTemplatesUpdate) | **PUT** /dcim/power-port-templates/{id}/ | 
*DcimApi* | [**dcimPowerPortsCreate**](docs/DcimApi.md#dcimPowerPortsCreate) | **POST** /dcim/power-ports/ | 
*DcimApi* | [**dcimPowerPortsDelete**](docs/DcimApi.md#dcimPowerPortsDelete) | **DELETE** /dcim/power-ports/{id}/ | 
*DcimApi* | [**dcimPowerPortsList**](docs/DcimApi.md#dcimPowerPortsList) | **GET** /dcim/power-ports/ | 
*DcimApi* | [**dcimPowerPortsPartialUpdate**](docs/DcimApi.md#dcimPowerPortsPartialUpdate) | **PATCH** /dcim/power-ports/{id}/ | 
*DcimApi* | [**dcimPowerPortsRead**](docs/DcimApi.md#dcimPowerPortsRead) | **GET** /dcim/power-ports/{id}/ | 
*DcimApi* | [**dcimPowerPortsUpdate**](docs/DcimApi.md#dcimPowerPortsUpdate) | **PUT** /dcim/power-ports/{id}/ | 
*DcimApi* | [**dcimRackGroupsCreate**](docs/DcimApi.md#dcimRackGroupsCreate) | **POST** /dcim/rack-groups/ | 
*DcimApi* | [**dcimRackGroupsDelete**](docs/DcimApi.md#dcimRackGroupsDelete) | **DELETE** /dcim/rack-groups/{id}/ | 
*DcimApi* | [**dcimRackGroupsList**](docs/DcimApi.md#dcimRackGroupsList) | **GET** /dcim/rack-groups/ | 
*DcimApi* | [**dcimRackGroupsPartialUpdate**](docs/DcimApi.md#dcimRackGroupsPartialUpdate) | **PATCH** /dcim/rack-groups/{id}/ | 
*DcimApi* | [**dcimRackGroupsRead**](docs/DcimApi.md#dcimRackGroupsRead) | **GET** /dcim/rack-groups/{id}/ | 
*DcimApi* | [**dcimRackGroupsUpdate**](docs/DcimApi.md#dcimRackGroupsUpdate) | **PUT** /dcim/rack-groups/{id}/ | 
*DcimApi* | [**dcimRackReservationsCreate**](docs/DcimApi.md#dcimRackReservationsCreate) | **POST** /dcim/rack-reservations/ | 
*DcimApi* | [**dcimRackReservationsDelete**](docs/DcimApi.md#dcimRackReservationsDelete) | **DELETE** /dcim/rack-reservations/{id}/ | 
*DcimApi* | [**dcimRackReservationsList**](docs/DcimApi.md#dcimRackReservationsList) | **GET** /dcim/rack-reservations/ | 
*DcimApi* | [**dcimRackReservationsPartialUpdate**](docs/DcimApi.md#dcimRackReservationsPartialUpdate) | **PATCH** /dcim/rack-reservations/{id}/ | 
*DcimApi* | [**dcimRackReservationsRead**](docs/DcimApi.md#dcimRackReservationsRead) | **GET** /dcim/rack-reservations/{id}/ | 
*DcimApi* | [**dcimRackReservationsUpdate**](docs/DcimApi.md#dcimRackReservationsUpdate) | **PUT** /dcim/rack-reservations/{id}/ | 
*DcimApi* | [**dcimRackRolesCreate**](docs/DcimApi.md#dcimRackRolesCreate) | **POST** /dcim/rack-roles/ | 
*DcimApi* | [**dcimRackRolesDelete**](docs/DcimApi.md#dcimRackRolesDelete) | **DELETE** /dcim/rack-roles/{id}/ | 
*DcimApi* | [**dcimRackRolesList**](docs/DcimApi.md#dcimRackRolesList) | **GET** /dcim/rack-roles/ | 
*DcimApi* | [**dcimRackRolesPartialUpdate**](docs/DcimApi.md#dcimRackRolesPartialUpdate) | **PATCH** /dcim/rack-roles/{id}/ | 
*DcimApi* | [**dcimRackRolesRead**](docs/DcimApi.md#dcimRackRolesRead) | **GET** /dcim/rack-roles/{id}/ | 
*DcimApi* | [**dcimRackRolesUpdate**](docs/DcimApi.md#dcimRackRolesUpdate) | **PUT** /dcim/rack-roles/{id}/ | 
*DcimApi* | [**dcimRacksCreate**](docs/DcimApi.md#dcimRacksCreate) | **POST** /dcim/racks/ | 
*DcimApi* | [**dcimRacksDelete**](docs/DcimApi.md#dcimRacksDelete) | **DELETE** /dcim/racks/{id}/ | 
*DcimApi* | [**dcimRacksList**](docs/DcimApi.md#dcimRacksList) | **GET** /dcim/racks/ | 
*DcimApi* | [**dcimRacksPartialUpdate**](docs/DcimApi.md#dcimRacksPartialUpdate) | **PATCH** /dcim/racks/{id}/ | 
*DcimApi* | [**dcimRacksRead**](docs/DcimApi.md#dcimRacksRead) | **GET** /dcim/racks/{id}/ | 
*DcimApi* | [**dcimRacksUnits**](docs/DcimApi.md#dcimRacksUnits) | **GET** /dcim/racks/{id}/units/ | 
*DcimApi* | [**dcimRacksUpdate**](docs/DcimApi.md#dcimRacksUpdate) | **PUT** /dcim/racks/{id}/ | 
*DcimApi* | [**dcimRegionsCreate**](docs/DcimApi.md#dcimRegionsCreate) | **POST** /dcim/regions/ | 
*DcimApi* | [**dcimRegionsDelete**](docs/DcimApi.md#dcimRegionsDelete) | **DELETE** /dcim/regions/{id}/ | 
*DcimApi* | [**dcimRegionsList**](docs/DcimApi.md#dcimRegionsList) | **GET** /dcim/regions/ | 
*DcimApi* | [**dcimRegionsPartialUpdate**](docs/DcimApi.md#dcimRegionsPartialUpdate) | **PATCH** /dcim/regions/{id}/ | 
*DcimApi* | [**dcimRegionsRead**](docs/DcimApi.md#dcimRegionsRead) | **GET** /dcim/regions/{id}/ | 
*DcimApi* | [**dcimRegionsUpdate**](docs/DcimApi.md#dcimRegionsUpdate) | **PUT** /dcim/regions/{id}/ | 
*DcimApi* | [**dcimSitesCreate**](docs/DcimApi.md#dcimSitesCreate) | **POST** /dcim/sites/ | 
*DcimApi* | [**dcimSitesDelete**](docs/DcimApi.md#dcimSitesDelete) | **DELETE** /dcim/sites/{id}/ | 
*DcimApi* | [**dcimSitesGraphs**](docs/DcimApi.md#dcimSitesGraphs) | **GET** /dcim/sites/{id}/graphs/ | 
*DcimApi* | [**dcimSitesList**](docs/DcimApi.md#dcimSitesList) | **GET** /dcim/sites/ | 
*DcimApi* | [**dcimSitesPartialUpdate**](docs/DcimApi.md#dcimSitesPartialUpdate) | **PATCH** /dcim/sites/{id}/ | 
*DcimApi* | [**dcimSitesRead**](docs/DcimApi.md#dcimSitesRead) | **GET** /dcim/sites/{id}/ | 
*DcimApi* | [**dcimSitesUpdate**](docs/DcimApi.md#dcimSitesUpdate) | **PUT** /dcim/sites/{id}/ | 
*DcimApi* | [**dcimVirtualChassisCreate**](docs/DcimApi.md#dcimVirtualChassisCreate) | **POST** /dcim/virtual-chassis/ | 
*DcimApi* | [**dcimVirtualChassisDelete**](docs/DcimApi.md#dcimVirtualChassisDelete) | **DELETE** /dcim/virtual-chassis/{id}/ | 
*DcimApi* | [**dcimVirtualChassisList**](docs/DcimApi.md#dcimVirtualChassisList) | **GET** /dcim/virtual-chassis/ | 
*DcimApi* | [**dcimVirtualChassisPartialUpdate**](docs/DcimApi.md#dcimVirtualChassisPartialUpdate) | **PATCH** /dcim/virtual-chassis/{id}/ | 
*DcimApi* | [**dcimVirtualChassisRead**](docs/DcimApi.md#dcimVirtualChassisRead) | **GET** /dcim/virtual-chassis/{id}/ | 
*DcimApi* | [**dcimVirtualChassisUpdate**](docs/DcimApi.md#dcimVirtualChassisUpdate) | **PUT** /dcim/virtual-chassis/{id}/ | 
*ExtrasApi* | [**extrasChoicesList**](docs/ExtrasApi.md#extrasChoicesList) | **GET** /extras/_choices/ | 
*ExtrasApi* | [**extrasChoicesRead**](docs/ExtrasApi.md#extrasChoicesRead) | **GET** /extras/_choices/{id}/ | 
*ExtrasApi* | [**extrasConfigContextsCreate**](docs/ExtrasApi.md#extrasConfigContextsCreate) | **POST** /extras/config-contexts/ | 
*ExtrasApi* | [**extrasConfigContextsDelete**](docs/ExtrasApi.md#extrasConfigContextsDelete) | **DELETE** /extras/config-contexts/{id}/ | 
*ExtrasApi* | [**extrasConfigContextsList**](docs/ExtrasApi.md#extrasConfigContextsList) | **GET** /extras/config-contexts/ | 
*ExtrasApi* | [**extrasConfigContextsPartialUpdate**](docs/ExtrasApi.md#extrasConfigContextsPartialUpdate) | **PATCH** /extras/config-contexts/{id}/ | 
*ExtrasApi* | [**extrasConfigContextsRead**](docs/ExtrasApi.md#extrasConfigContextsRead) | **GET** /extras/config-contexts/{id}/ | 
*ExtrasApi* | [**extrasConfigContextsUpdate**](docs/ExtrasApi.md#extrasConfigContextsUpdate) | **PUT** /extras/config-contexts/{id}/ | 
*ExtrasApi* | [**extrasExportTemplatesCreate**](docs/ExtrasApi.md#extrasExportTemplatesCreate) | **POST** /extras/export-templates/ | 
*ExtrasApi* | [**extrasExportTemplatesDelete**](docs/ExtrasApi.md#extrasExportTemplatesDelete) | **DELETE** /extras/export-templates/{id}/ | 
*ExtrasApi* | [**extrasExportTemplatesList**](docs/ExtrasApi.md#extrasExportTemplatesList) | **GET** /extras/export-templates/ | 
*ExtrasApi* | [**extrasExportTemplatesPartialUpdate**](docs/ExtrasApi.md#extrasExportTemplatesPartialUpdate) | **PATCH** /extras/export-templates/{id}/ | 
*ExtrasApi* | [**extrasExportTemplatesRead**](docs/ExtrasApi.md#extrasExportTemplatesRead) | **GET** /extras/export-templates/{id}/ | 
*ExtrasApi* | [**extrasExportTemplatesUpdate**](docs/ExtrasApi.md#extrasExportTemplatesUpdate) | **PUT** /extras/export-templates/{id}/ | 
*ExtrasApi* | [**extrasGraphsCreate**](docs/ExtrasApi.md#extrasGraphsCreate) | **POST** /extras/graphs/ | 
*ExtrasApi* | [**extrasGraphsDelete**](docs/ExtrasApi.md#extrasGraphsDelete) | **DELETE** /extras/graphs/{id}/ | 
*ExtrasApi* | [**extrasGraphsList**](docs/ExtrasApi.md#extrasGraphsList) | **GET** /extras/graphs/ | 
*ExtrasApi* | [**extrasGraphsPartialUpdate**](docs/ExtrasApi.md#extrasGraphsPartialUpdate) | **PATCH** /extras/graphs/{id}/ | 
*ExtrasApi* | [**extrasGraphsRead**](docs/ExtrasApi.md#extrasGraphsRead) | **GET** /extras/graphs/{id}/ | 
*ExtrasApi* | [**extrasGraphsUpdate**](docs/ExtrasApi.md#extrasGraphsUpdate) | **PUT** /extras/graphs/{id}/ | 
*ExtrasApi* | [**extrasImageAttachmentsCreate**](docs/ExtrasApi.md#extrasImageAttachmentsCreate) | **POST** /extras/image-attachments/ | 
*ExtrasApi* | [**extrasImageAttachmentsDelete**](docs/ExtrasApi.md#extrasImageAttachmentsDelete) | **DELETE** /extras/image-attachments/{id}/ | 
*ExtrasApi* | [**extrasImageAttachmentsList**](docs/ExtrasApi.md#extrasImageAttachmentsList) | **GET** /extras/image-attachments/ | 
*ExtrasApi* | [**extrasImageAttachmentsPartialUpdate**](docs/ExtrasApi.md#extrasImageAttachmentsPartialUpdate) | **PATCH** /extras/image-attachments/{id}/ | 
*ExtrasApi* | [**extrasImageAttachmentsRead**](docs/ExtrasApi.md#extrasImageAttachmentsRead) | **GET** /extras/image-attachments/{id}/ | 
*ExtrasApi* | [**extrasImageAttachmentsUpdate**](docs/ExtrasApi.md#extrasImageAttachmentsUpdate) | **PUT** /extras/image-attachments/{id}/ | 
*ExtrasApi* | [**extrasObjectChangesList**](docs/ExtrasApi.md#extrasObjectChangesList) | **GET** /extras/object-changes/ | 
*ExtrasApi* | [**extrasObjectChangesRead**](docs/ExtrasApi.md#extrasObjectChangesRead) | **GET** /extras/object-changes/{id}/ | 
*ExtrasApi* | [**extrasRecentActivityList**](docs/ExtrasApi.md#extrasRecentActivityList) | **GET** /extras/recent-activity/ | 
*ExtrasApi* | [**extrasRecentActivityRead**](docs/ExtrasApi.md#extrasRecentActivityRead) | **GET** /extras/recent-activity/{id}/ | 
*ExtrasApi* | [**extrasTagsCreate**](docs/ExtrasApi.md#extrasTagsCreate) | **POST** /extras/tags/ | 
*ExtrasApi* | [**extrasTagsDelete**](docs/ExtrasApi.md#extrasTagsDelete) | **DELETE** /extras/tags/{id}/ | 
*ExtrasApi* | [**extrasTagsList**](docs/ExtrasApi.md#extrasTagsList) | **GET** /extras/tags/ | 
*ExtrasApi* | [**extrasTagsPartialUpdate**](docs/ExtrasApi.md#extrasTagsPartialUpdate) | **PATCH** /extras/tags/{id}/ | 
*ExtrasApi* | [**extrasTagsRead**](docs/ExtrasApi.md#extrasTagsRead) | **GET** /extras/tags/{id}/ | 
*ExtrasApi* | [**extrasTagsUpdate**](docs/ExtrasApi.md#extrasTagsUpdate) | **PUT** /extras/tags/{id}/ | 
*ExtrasApi* | [**extrasTopologyMapsCreate**](docs/ExtrasApi.md#extrasTopologyMapsCreate) | **POST** /extras/topology-maps/ | 
*ExtrasApi* | [**extrasTopologyMapsDelete**](docs/ExtrasApi.md#extrasTopologyMapsDelete) | **DELETE** /extras/topology-maps/{id}/ | 
*ExtrasApi* | [**extrasTopologyMapsList**](docs/ExtrasApi.md#extrasTopologyMapsList) | **GET** /extras/topology-maps/ | 
*ExtrasApi* | [**extrasTopologyMapsPartialUpdate**](docs/ExtrasApi.md#extrasTopologyMapsPartialUpdate) | **PATCH** /extras/topology-maps/{id}/ | 
*ExtrasApi* | [**extrasTopologyMapsRead**](docs/ExtrasApi.md#extrasTopologyMapsRead) | **GET** /extras/topology-maps/{id}/ | 
*ExtrasApi* | [**extrasTopologyMapsRender**](docs/ExtrasApi.md#extrasTopologyMapsRender) | **GET** /extras/topology-maps/{id}/render/ | 
*ExtrasApi* | [**extrasTopologyMapsUpdate**](docs/ExtrasApi.md#extrasTopologyMapsUpdate) | **PUT** /extras/topology-maps/{id}/ | 
*IpamApi* | [**ipamAggregatesCreate**](docs/IpamApi.md#ipamAggregatesCreate) | **POST** /ipam/aggregates/ | 
*IpamApi* | [**ipamAggregatesDelete**](docs/IpamApi.md#ipamAggregatesDelete) | **DELETE** /ipam/aggregates/{id}/ | 
*IpamApi* | [**ipamAggregatesList**](docs/IpamApi.md#ipamAggregatesList) | **GET** /ipam/aggregates/ | 
*IpamApi* | [**ipamAggregatesPartialUpdate**](docs/IpamApi.md#ipamAggregatesPartialUpdate) | **PATCH** /ipam/aggregates/{id}/ | 
*IpamApi* | [**ipamAggregatesRead**](docs/IpamApi.md#ipamAggregatesRead) | **GET** /ipam/aggregates/{id}/ | 
*IpamApi* | [**ipamAggregatesUpdate**](docs/IpamApi.md#ipamAggregatesUpdate) | **PUT** /ipam/aggregates/{id}/ | 
*IpamApi* | [**ipamChoicesList**](docs/IpamApi.md#ipamChoicesList) | **GET** /ipam/_choices/ | 
*IpamApi* | [**ipamChoicesRead**](docs/IpamApi.md#ipamChoicesRead) | **GET** /ipam/_choices/{id}/ | 
*IpamApi* | [**ipamIpAddressesCreate**](docs/IpamApi.md#ipamIpAddressesCreate) | **POST** /ipam/ip-addresses/ | 
*IpamApi* | [**ipamIpAddressesDelete**](docs/IpamApi.md#ipamIpAddressesDelete) | **DELETE** /ipam/ip-addresses/{id}/ | 
*IpamApi* | [**ipamIpAddressesList**](docs/IpamApi.md#ipamIpAddressesList) | **GET** /ipam/ip-addresses/ | 
*IpamApi* | [**ipamIpAddressesPartialUpdate**](docs/IpamApi.md#ipamIpAddressesPartialUpdate) | **PATCH** /ipam/ip-addresses/{id}/ | 
*IpamApi* | [**ipamIpAddressesRead**](docs/IpamApi.md#ipamIpAddressesRead) | **GET** /ipam/ip-addresses/{id}/ | 
*IpamApi* | [**ipamIpAddressesUpdate**](docs/IpamApi.md#ipamIpAddressesUpdate) | **PUT** /ipam/ip-addresses/{id}/ | 
*IpamApi* | [**ipamPrefixesAvailableIpsCreate**](docs/IpamApi.md#ipamPrefixesAvailableIpsCreate) | **POST** /ipam/prefixes/{id}/available-ips/ | 
*IpamApi* | [**ipamPrefixesAvailableIpsRead**](docs/IpamApi.md#ipamPrefixesAvailableIpsRead) | **GET** /ipam/prefixes/{id}/available-ips/ | 
*IpamApi* | [**ipamPrefixesAvailablePrefixesCreate**](docs/IpamApi.md#ipamPrefixesAvailablePrefixesCreate) | **POST** /ipam/prefixes/{id}/available-prefixes/ | 
*IpamApi* | [**ipamPrefixesAvailablePrefixesRead**](docs/IpamApi.md#ipamPrefixesAvailablePrefixesRead) | **GET** /ipam/prefixes/{id}/available-prefixes/ | 
*IpamApi* | [**ipamPrefixesCreate**](docs/IpamApi.md#ipamPrefixesCreate) | **POST** /ipam/prefixes/ | 
*IpamApi* | [**ipamPrefixesDelete**](docs/IpamApi.md#ipamPrefixesDelete) | **DELETE** /ipam/prefixes/{id}/ | 
*IpamApi* | [**ipamPrefixesList**](docs/IpamApi.md#ipamPrefixesList) | **GET** /ipam/prefixes/ | 
*IpamApi* | [**ipamPrefixesPartialUpdate**](docs/IpamApi.md#ipamPrefixesPartialUpdate) | **PATCH** /ipam/prefixes/{id}/ | 
*IpamApi* | [**ipamPrefixesRead**](docs/IpamApi.md#ipamPrefixesRead) | **GET** /ipam/prefixes/{id}/ | 
*IpamApi* | [**ipamPrefixesUpdate**](docs/IpamApi.md#ipamPrefixesUpdate) | **PUT** /ipam/prefixes/{id}/ | 
*IpamApi* | [**ipamRirsCreate**](docs/IpamApi.md#ipamRirsCreate) | **POST** /ipam/rirs/ | 
*IpamApi* | [**ipamRirsDelete**](docs/IpamApi.md#ipamRirsDelete) | **DELETE** /ipam/rirs/{id}/ | 
*IpamApi* | [**ipamRirsList**](docs/IpamApi.md#ipamRirsList) | **GET** /ipam/rirs/ | 
*IpamApi* | [**ipamRirsPartialUpdate**](docs/IpamApi.md#ipamRirsPartialUpdate) | **PATCH** /ipam/rirs/{id}/ | 
*IpamApi* | [**ipamRirsRead**](docs/IpamApi.md#ipamRirsRead) | **GET** /ipam/rirs/{id}/ | 
*IpamApi* | [**ipamRirsUpdate**](docs/IpamApi.md#ipamRirsUpdate) | **PUT** /ipam/rirs/{id}/ | 
*IpamApi* | [**ipamRolesCreate**](docs/IpamApi.md#ipamRolesCreate) | **POST** /ipam/roles/ | 
*IpamApi* | [**ipamRolesDelete**](docs/IpamApi.md#ipamRolesDelete) | **DELETE** /ipam/roles/{id}/ | 
*IpamApi* | [**ipamRolesList**](docs/IpamApi.md#ipamRolesList) | **GET** /ipam/roles/ | 
*IpamApi* | [**ipamRolesPartialUpdate**](docs/IpamApi.md#ipamRolesPartialUpdate) | **PATCH** /ipam/roles/{id}/ | 
*IpamApi* | [**ipamRolesRead**](docs/IpamApi.md#ipamRolesRead) | **GET** /ipam/roles/{id}/ | 
*IpamApi* | [**ipamRolesUpdate**](docs/IpamApi.md#ipamRolesUpdate) | **PUT** /ipam/roles/{id}/ | 
*IpamApi* | [**ipamServicesCreate**](docs/IpamApi.md#ipamServicesCreate) | **POST** /ipam/services/ | 
*IpamApi* | [**ipamServicesDelete**](docs/IpamApi.md#ipamServicesDelete) | **DELETE** /ipam/services/{id}/ | 
*IpamApi* | [**ipamServicesList**](docs/IpamApi.md#ipamServicesList) | **GET** /ipam/services/ | 
*IpamApi* | [**ipamServicesPartialUpdate**](docs/IpamApi.md#ipamServicesPartialUpdate) | **PATCH** /ipam/services/{id}/ | 
*IpamApi* | [**ipamServicesRead**](docs/IpamApi.md#ipamServicesRead) | **GET** /ipam/services/{id}/ | 
*IpamApi* | [**ipamServicesUpdate**](docs/IpamApi.md#ipamServicesUpdate) | **PUT** /ipam/services/{id}/ | 
*IpamApi* | [**ipamVlanGroupsCreate**](docs/IpamApi.md#ipamVlanGroupsCreate) | **POST** /ipam/vlan-groups/ | 
*IpamApi* | [**ipamVlanGroupsDelete**](docs/IpamApi.md#ipamVlanGroupsDelete) | **DELETE** /ipam/vlan-groups/{id}/ | 
*IpamApi* | [**ipamVlanGroupsList**](docs/IpamApi.md#ipamVlanGroupsList) | **GET** /ipam/vlan-groups/ | 
*IpamApi* | [**ipamVlanGroupsPartialUpdate**](docs/IpamApi.md#ipamVlanGroupsPartialUpdate) | **PATCH** /ipam/vlan-groups/{id}/ | 
*IpamApi* | [**ipamVlanGroupsRead**](docs/IpamApi.md#ipamVlanGroupsRead) | **GET** /ipam/vlan-groups/{id}/ | 
*IpamApi* | [**ipamVlanGroupsUpdate**](docs/IpamApi.md#ipamVlanGroupsUpdate) | **PUT** /ipam/vlan-groups/{id}/ | 
*IpamApi* | [**ipamVlansCreate**](docs/IpamApi.md#ipamVlansCreate) | **POST** /ipam/vlans/ | 
*IpamApi* | [**ipamVlansDelete**](docs/IpamApi.md#ipamVlansDelete) | **DELETE** /ipam/vlans/{id}/ | 
*IpamApi* | [**ipamVlansList**](docs/IpamApi.md#ipamVlansList) | **GET** /ipam/vlans/ | 
*IpamApi* | [**ipamVlansPartialUpdate**](docs/IpamApi.md#ipamVlansPartialUpdate) | **PATCH** /ipam/vlans/{id}/ | 
*IpamApi* | [**ipamVlansRead**](docs/IpamApi.md#ipamVlansRead) | **GET** /ipam/vlans/{id}/ | 
*IpamApi* | [**ipamVlansUpdate**](docs/IpamApi.md#ipamVlansUpdate) | **PUT** /ipam/vlans/{id}/ | 
*IpamApi* | [**ipamVrfsCreate**](docs/IpamApi.md#ipamVrfsCreate) | **POST** /ipam/vrfs/ | 
*IpamApi* | [**ipamVrfsDelete**](docs/IpamApi.md#ipamVrfsDelete) | **DELETE** /ipam/vrfs/{id}/ | 
*IpamApi* | [**ipamVrfsList**](docs/IpamApi.md#ipamVrfsList) | **GET** /ipam/vrfs/ | 
*IpamApi* | [**ipamVrfsPartialUpdate**](docs/IpamApi.md#ipamVrfsPartialUpdate) | **PATCH** /ipam/vrfs/{id}/ | 
*IpamApi* | [**ipamVrfsRead**](docs/IpamApi.md#ipamVrfsRead) | **GET** /ipam/vrfs/{id}/ | 
*IpamApi* | [**ipamVrfsUpdate**](docs/IpamApi.md#ipamVrfsUpdate) | **PUT** /ipam/vrfs/{id}/ | 
*SecretsApi* | [**secretsChoicesList**](docs/SecretsApi.md#secretsChoicesList) | **GET** /secrets/_choices/ | 
*SecretsApi* | [**secretsChoicesRead**](docs/SecretsApi.md#secretsChoicesRead) | **GET** /secrets/_choices/{id}/ | 
*SecretsApi* | [**secretsGenerateRsaKeyPairList**](docs/SecretsApi.md#secretsGenerateRsaKeyPairList) | **GET** /secrets/generate-rsa-key-pair/ | 
*SecretsApi* | [**secretsGetSessionKeyCreate**](docs/SecretsApi.md#secretsGetSessionKeyCreate) | **POST** /secrets/get-session-key/ | 
*SecretsApi* | [**secretsSecretRolesCreate**](docs/SecretsApi.md#secretsSecretRolesCreate) | **POST** /secrets/secret-roles/ | 
*SecretsApi* | [**secretsSecretRolesDelete**](docs/SecretsApi.md#secretsSecretRolesDelete) | **DELETE** /secrets/secret-roles/{id}/ | 
*SecretsApi* | [**secretsSecretRolesList**](docs/SecretsApi.md#secretsSecretRolesList) | **GET** /secrets/secret-roles/ | 
*SecretsApi* | [**secretsSecretRolesPartialUpdate**](docs/SecretsApi.md#secretsSecretRolesPartialUpdate) | **PATCH** /secrets/secret-roles/{id}/ | 
*SecretsApi* | [**secretsSecretRolesRead**](docs/SecretsApi.md#secretsSecretRolesRead) | **GET** /secrets/secret-roles/{id}/ | 
*SecretsApi* | [**secretsSecretRolesUpdate**](docs/SecretsApi.md#secretsSecretRolesUpdate) | **PUT** /secrets/secret-roles/{id}/ | 
*SecretsApi* | [**secretsSecretsCreate**](docs/SecretsApi.md#secretsSecretsCreate) | **POST** /secrets/secrets/ | 
*SecretsApi* | [**secretsSecretsDelete**](docs/SecretsApi.md#secretsSecretsDelete) | **DELETE** /secrets/secrets/{id}/ | 
*SecretsApi* | [**secretsSecretsList**](docs/SecretsApi.md#secretsSecretsList) | **GET** /secrets/secrets/ | 
*SecretsApi* | [**secretsSecretsPartialUpdate**](docs/SecretsApi.md#secretsSecretsPartialUpdate) | **PATCH** /secrets/secrets/{id}/ | 
*SecretsApi* | [**secretsSecretsRead**](docs/SecretsApi.md#secretsSecretsRead) | **GET** /secrets/secrets/{id}/ | 
*SecretsApi* | [**secretsSecretsUpdate**](docs/SecretsApi.md#secretsSecretsUpdate) | **PUT** /secrets/secrets/{id}/ | 
*TenancyApi* | [**tenancyChoicesList**](docs/TenancyApi.md#tenancyChoicesList) | **GET** /tenancy/_choices/ | 
*TenancyApi* | [**tenancyChoicesRead**](docs/TenancyApi.md#tenancyChoicesRead) | **GET** /tenancy/_choices/{id}/ | 
*TenancyApi* | [**tenancyTenantGroupsCreate**](docs/TenancyApi.md#tenancyTenantGroupsCreate) | **POST** /tenancy/tenant-groups/ | 
*TenancyApi* | [**tenancyTenantGroupsDelete**](docs/TenancyApi.md#tenancyTenantGroupsDelete) | **DELETE** /tenancy/tenant-groups/{id}/ | 
*TenancyApi* | [**tenancyTenantGroupsList**](docs/TenancyApi.md#tenancyTenantGroupsList) | **GET** /tenancy/tenant-groups/ | 
*TenancyApi* | [**tenancyTenantGroupsPartialUpdate**](docs/TenancyApi.md#tenancyTenantGroupsPartialUpdate) | **PATCH** /tenancy/tenant-groups/{id}/ | 
*TenancyApi* | [**tenancyTenantGroupsRead**](docs/TenancyApi.md#tenancyTenantGroupsRead) | **GET** /tenancy/tenant-groups/{id}/ | 
*TenancyApi* | [**tenancyTenantGroupsUpdate**](docs/TenancyApi.md#tenancyTenantGroupsUpdate) | **PUT** /tenancy/tenant-groups/{id}/ | 
*TenancyApi* | [**tenancyTenantsCreate**](docs/TenancyApi.md#tenancyTenantsCreate) | **POST** /tenancy/tenants/ | 
*TenancyApi* | [**tenancyTenantsDelete**](docs/TenancyApi.md#tenancyTenantsDelete) | **DELETE** /tenancy/tenants/{id}/ | 
*TenancyApi* | [**tenancyTenantsList**](docs/TenancyApi.md#tenancyTenantsList) | **GET** /tenancy/tenants/ | 
*TenancyApi* | [**tenancyTenantsPartialUpdate**](docs/TenancyApi.md#tenancyTenantsPartialUpdate) | **PATCH** /tenancy/tenants/{id}/ | 
*TenancyApi* | [**tenancyTenantsRead**](docs/TenancyApi.md#tenancyTenantsRead) | **GET** /tenancy/tenants/{id}/ | 
*TenancyApi* | [**tenancyTenantsUpdate**](docs/TenancyApi.md#tenancyTenantsUpdate) | **PUT** /tenancy/tenants/{id}/ | 
*VirtualizationApi* | [**virtualizationChoicesList**](docs/VirtualizationApi.md#virtualizationChoicesList) | **GET** /virtualization/_choices/ | 
*VirtualizationApi* | [**virtualizationChoicesRead**](docs/VirtualizationApi.md#virtualizationChoicesRead) | **GET** /virtualization/_choices/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsCreate**](docs/VirtualizationApi.md#virtualizationClusterGroupsCreate) | **POST** /virtualization/cluster-groups/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsDelete**](docs/VirtualizationApi.md#virtualizationClusterGroupsDelete) | **DELETE** /virtualization/cluster-groups/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsList**](docs/VirtualizationApi.md#virtualizationClusterGroupsList) | **GET** /virtualization/cluster-groups/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsPartialUpdate**](docs/VirtualizationApi.md#virtualizationClusterGroupsPartialUpdate) | **PATCH** /virtualization/cluster-groups/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsRead**](docs/VirtualizationApi.md#virtualizationClusterGroupsRead) | **GET** /virtualization/cluster-groups/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterGroupsUpdate**](docs/VirtualizationApi.md#virtualizationClusterGroupsUpdate) | **PUT** /virtualization/cluster-groups/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterTypesCreate**](docs/VirtualizationApi.md#virtualizationClusterTypesCreate) | **POST** /virtualization/cluster-types/ | 
*VirtualizationApi* | [**virtualizationClusterTypesDelete**](docs/VirtualizationApi.md#virtualizationClusterTypesDelete) | **DELETE** /virtualization/cluster-types/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterTypesList**](docs/VirtualizationApi.md#virtualizationClusterTypesList) | **GET** /virtualization/cluster-types/ | 
*VirtualizationApi* | [**virtualizationClusterTypesPartialUpdate**](docs/VirtualizationApi.md#virtualizationClusterTypesPartialUpdate) | **PATCH** /virtualization/cluster-types/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterTypesRead**](docs/VirtualizationApi.md#virtualizationClusterTypesRead) | **GET** /virtualization/cluster-types/{id}/ | 
*VirtualizationApi* | [**virtualizationClusterTypesUpdate**](docs/VirtualizationApi.md#virtualizationClusterTypesUpdate) | **PUT** /virtualization/cluster-types/{id}/ | 
*VirtualizationApi* | [**virtualizationClustersCreate**](docs/VirtualizationApi.md#virtualizationClustersCreate) | **POST** /virtualization/clusters/ | 
*VirtualizationApi* | [**virtualizationClustersDelete**](docs/VirtualizationApi.md#virtualizationClustersDelete) | **DELETE** /virtualization/clusters/{id}/ | 
*VirtualizationApi* | [**virtualizationClustersList**](docs/VirtualizationApi.md#virtualizationClustersList) | **GET** /virtualization/clusters/ | 
*VirtualizationApi* | [**virtualizationClustersPartialUpdate**](docs/VirtualizationApi.md#virtualizationClustersPartialUpdate) | **PATCH** /virtualization/clusters/{id}/ | 
*VirtualizationApi* | [**virtualizationClustersRead**](docs/VirtualizationApi.md#virtualizationClustersRead) | **GET** /virtualization/clusters/{id}/ | 
*VirtualizationApi* | [**virtualizationClustersUpdate**](docs/VirtualizationApi.md#virtualizationClustersUpdate) | **PUT** /virtualization/clusters/{id}/ | 
*VirtualizationApi* | [**virtualizationInterfacesCreate**](docs/VirtualizationApi.md#virtualizationInterfacesCreate) | **POST** /virtualization/interfaces/ | 
*VirtualizationApi* | [**virtualizationInterfacesDelete**](docs/VirtualizationApi.md#virtualizationInterfacesDelete) | **DELETE** /virtualization/interfaces/{id}/ | 
*VirtualizationApi* | [**virtualizationInterfacesList**](docs/VirtualizationApi.md#virtualizationInterfacesList) | **GET** /virtualization/interfaces/ | 
*VirtualizationApi* | [**virtualizationInterfacesPartialUpdate**](docs/VirtualizationApi.md#virtualizationInterfacesPartialUpdate) | **PATCH** /virtualization/interfaces/{id}/ | 
*VirtualizationApi* | [**virtualizationInterfacesRead**](docs/VirtualizationApi.md#virtualizationInterfacesRead) | **GET** /virtualization/interfaces/{id}/ | 
*VirtualizationApi* | [**virtualizationInterfacesUpdate**](docs/VirtualizationApi.md#virtualizationInterfacesUpdate) | **PUT** /virtualization/interfaces/{id}/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesCreate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesCreate) | **POST** /virtualization/virtual-machines/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesDelete**](docs/VirtualizationApi.md#virtualizationVirtualMachinesDelete) | **DELETE** /virtualization/virtual-machines/{id}/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesList**](docs/VirtualizationApi.md#virtualizationVirtualMachinesList) | **GET** /virtualization/virtual-machines/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesPartialUpdate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesPartialUpdate) | **PATCH** /virtualization/virtual-machines/{id}/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesRead**](docs/VirtualizationApi.md#virtualizationVirtualMachinesRead) | **GET** /virtualization/virtual-machines/{id}/ | 
*VirtualizationApi* | [**virtualizationVirtualMachinesUpdate**](docs/VirtualizationApi.md#virtualizationVirtualMachinesUpdate) | **PUT** /virtualization/virtual-machines/{id}/ | 


## Documentation for Models

 - [Action](docs/Action.md)
 - [Aggregate](docs/Aggregate.md)
 - [Circuit](docs/Circuit.md)
 - [CircuitTermination](docs/CircuitTermination.md)
 - [CircuitType](docs/CircuitType.md)
 - [CircuitsCircuitTerminationsList200Response](docs/CircuitsCircuitTerminationsList200Response.md)
 - [CircuitsCircuitTypesList200Response](docs/CircuitsCircuitTypesList200Response.md)
 - [CircuitsCircuitsList200Response](docs/CircuitsCircuitsList200Response.md)
 - [CircuitsProvidersList200Response](docs/CircuitsProvidersList200Response.md)
 - [Cluster](docs/Cluster.md)
 - [ClusterGroup](docs/ClusterGroup.md)
 - [ClusterType](docs/ClusterType.md)
 - [ConfigContext](docs/ConfigContext.md)
 - [ConnectionStatus](docs/ConnectionStatus.md)
 - [ConsolePort](docs/ConsolePort.md)
 - [ConsolePortTemplate](docs/ConsolePortTemplate.md)
 - [ConsoleServerPort](docs/ConsoleServerPort.md)
 - [ConsoleServerPortTemplate](docs/ConsoleServerPortTemplate.md)
 - [DcimConsoleConnectionsList200Response](docs/DcimConsoleConnectionsList200Response.md)
 - [DcimConsolePortTemplatesList200Response](docs/DcimConsolePortTemplatesList200Response.md)
 - [DcimConsoleServerPortTemplatesList200Response](docs/DcimConsoleServerPortTemplatesList200Response.md)
 - [DcimConsoleServerPortsList200Response](docs/DcimConsoleServerPortsList200Response.md)
 - [DcimDeviceBayTemplatesList200Response](docs/DcimDeviceBayTemplatesList200Response.md)
 - [DcimDeviceBaysList200Response](docs/DcimDeviceBaysList200Response.md)
 - [DcimDeviceRolesList200Response](docs/DcimDeviceRolesList200Response.md)
 - [DcimDeviceTypesList200Response](docs/DcimDeviceTypesList200Response.md)
 - [DcimDevicesList200Response](docs/DcimDevicesList200Response.md)
 - [DcimInterfaceConnectionsList200Response](docs/DcimInterfaceConnectionsList200Response.md)
 - [DcimInterfaceTemplatesList200Response](docs/DcimInterfaceTemplatesList200Response.md)
 - [DcimInterfacesList200Response](docs/DcimInterfacesList200Response.md)
 - [DcimInventoryItemsList200Response](docs/DcimInventoryItemsList200Response.md)
 - [DcimManufacturersList200Response](docs/DcimManufacturersList200Response.md)
 - [DcimPlatformsList200Response](docs/DcimPlatformsList200Response.md)
 - [DcimPowerConnectionsList200Response](docs/DcimPowerConnectionsList200Response.md)
 - [DcimPowerOutletTemplatesList200Response](docs/DcimPowerOutletTemplatesList200Response.md)
 - [DcimPowerOutletsList200Response](docs/DcimPowerOutletsList200Response.md)
 - [DcimPowerPortTemplatesList200Response](docs/DcimPowerPortTemplatesList200Response.md)
 - [DcimRackGroupsList200Response](docs/DcimRackGroupsList200Response.md)
 - [DcimRackReservationsList200Response](docs/DcimRackReservationsList200Response.md)
 - [DcimRackRolesList200Response](docs/DcimRackRolesList200Response.md)
 - [DcimRacksList200Response](docs/DcimRacksList200Response.md)
 - [DcimRegionsList200Response](docs/DcimRegionsList200Response.md)
 - [DcimSitesList200Response](docs/DcimSitesList200Response.md)
 - [DcimVirtualChassisList200Response](docs/DcimVirtualChassisList200Response.md)
 - [Device](docs/Device.md)
 - [DeviceBay](docs/DeviceBay.md)
 - [DeviceBayTemplate](docs/DeviceBayTemplate.md)
 - [DeviceIPAddress](docs/DeviceIPAddress.md)
 - [DeviceRole](docs/DeviceRole.md)
 - [DeviceType](docs/DeviceType.md)
 - [DeviceVirtualChassis](docs/DeviceVirtualChassis.md)
 - [DeviceWithConfigContext](docs/DeviceWithConfigContext.md)
 - [ExportTemplate](docs/ExportTemplate.md)
 - [ExtrasConfigContextsList200Response](docs/ExtrasConfigContextsList200Response.md)
 - [ExtrasExportTemplatesList200Response](docs/ExtrasExportTemplatesList200Response.md)
 - [ExtrasGraphsList200Response](docs/ExtrasGraphsList200Response.md)
 - [ExtrasImageAttachmentsList200Response](docs/ExtrasImageAttachmentsList200Response.md)
 - [ExtrasObjectChangesList200Response](docs/ExtrasObjectChangesList200Response.md)
 - [ExtrasRecentActivityList200Response](docs/ExtrasRecentActivityList200Response.md)
 - [ExtrasTagsList200Response](docs/ExtrasTagsList200Response.md)
 - [ExtrasTopologyMapsList200Response](docs/ExtrasTopologyMapsList200Response.md)
 - [Face](docs/Face.md)
 - [FormFactor](docs/FormFactor.md)
 - [Graph](docs/Graph.md)
 - [IPAddress](docs/IPAddress.md)
 - [IPAddressInterface](docs/IPAddressInterface.md)
 - [ImageAttachment](docs/ImageAttachment.md)
 - [InterfaceCircuitTermination](docs/InterfaceCircuitTermination.md)
 - [InterfaceConnection](docs/InterfaceConnection.md)
 - [InterfaceNestedCircuit](docs/InterfaceNestedCircuit.md)
 - [InterfaceOrdering](docs/InterfaceOrdering.md)
 - [InterfaceTemplate](docs/InterfaceTemplate.md)
 - [InterfaceVLAN](docs/InterfaceVLAN.md)
 - [InventoryItem](docs/InventoryItem.md)
 - [IpamAggregatesList200Response](docs/IpamAggregatesList200Response.md)
 - [IpamIpAddressesList200Response](docs/IpamIpAddressesList200Response.md)
 - [IpamPrefixesList200Response](docs/IpamPrefixesList200Response.md)
 - [IpamRirsList200Response](docs/IpamRirsList200Response.md)
 - [IpamRolesList200Response](docs/IpamRolesList200Response.md)
 - [IpamServicesList200Response](docs/IpamServicesList200Response.md)
 - [IpamVlanGroupsList200Response](docs/IpamVlanGroupsList200Response.md)
 - [IpamVlansList200Response](docs/IpamVlansList200Response.md)
 - [IpamVrfsList200Response](docs/IpamVrfsList200Response.md)
 - [Manufacturer](docs/Manufacturer.md)
 - [Mode](docs/Mode.md)
 - [ModelInterface](docs/ModelInterface.md)
 - [NestedCircuit](docs/NestedCircuit.md)
 - [NestedCircuitType](docs/NestedCircuitType.md)
 - [NestedCluster](docs/NestedCluster.md)
 - [NestedClusterGroup](docs/NestedClusterGroup.md)
 - [NestedClusterType](docs/NestedClusterType.md)
 - [NestedConsoleServerPort](docs/NestedConsoleServerPort.md)
 - [NestedDevice](docs/NestedDevice.md)
 - [NestedDeviceRole](docs/NestedDeviceRole.md)
 - [NestedDeviceType](docs/NestedDeviceType.md)
 - [NestedIPAddress](docs/NestedIPAddress.md)
 - [NestedInterface](docs/NestedInterface.md)
 - [NestedManufacturer](docs/NestedManufacturer.md)
 - [NestedPlatform](docs/NestedPlatform.md)
 - [NestedPowerOutlet](docs/NestedPowerOutlet.md)
 - [NestedProvider](docs/NestedProvider.md)
 - [NestedRIR](docs/NestedRIR.md)
 - [NestedRack](docs/NestedRack.md)
 - [NestedRackGroup](docs/NestedRackGroup.md)
 - [NestedRackRole](docs/NestedRackRole.md)
 - [NestedRegion](docs/NestedRegion.md)
 - [NestedRole](docs/NestedRole.md)
 - [NestedSecretRole](docs/NestedSecretRole.md)
 - [NestedSite](docs/NestedSite.md)
 - [NestedTenant](docs/NestedTenant.md)
 - [NestedTenantGroup](docs/NestedTenantGroup.md)
 - [NestedUser](docs/NestedUser.md)
 - [NestedVLAN](docs/NestedVLAN.md)
 - [NestedVLANGroup](docs/NestedVLANGroup.md)
 - [NestedVRF](docs/NestedVRF.md)
 - [NestedVirtualMachine](docs/NestedVirtualMachine.md)
 - [ObjectChange](docs/ObjectChange.md)
 - [Platform](docs/Platform.md)
 - [PowerOutlet](docs/PowerOutlet.md)
 - [PowerOutletTemplate](docs/PowerOutletTemplate.md)
 - [PowerPort](docs/PowerPort.md)
 - [PowerPortTemplate](docs/PowerPortTemplate.md)
 - [Prefix](docs/Prefix.md)
 - [Protocol](docs/Protocol.md)
 - [Provider](docs/Provider.md)
 - [RIR](docs/RIR.md)
 - [Rack](docs/Rack.md)
 - [RackGroup](docs/RackGroup.md)
 - [RackReservation](docs/RackReservation.md)
 - [RackRole](docs/RackRole.md)
 - [Region](docs/Region.md)
 - [Role](docs/Role.md)
 - [Role1](docs/Role1.md)
 - [Secret](docs/Secret.md)
 - [SecretRole](docs/SecretRole.md)
 - [SecretsSecretRolesList200Response](docs/SecretsSecretRolesList200Response.md)
 - [SecretsSecretsList200Response](docs/SecretsSecretsList200Response.md)
 - [Service](docs/Service.md)
 - [Site](docs/Site.md)
 - [Status](docs/Status.md)
 - [SubdeviceRole](docs/SubdeviceRole.md)
 - [Tag](docs/Tag.md)
 - [TenancyTenantGroupsList200Response](docs/TenancyTenantGroupsList200Response.md)
 - [TenancyTenantsList200Response](docs/TenancyTenantsList200Response.md)
 - [Tenant](docs/Tenant.md)
 - [TenantGroup](docs/TenantGroup.md)
 - [TopologyMap](docs/TopologyMap.md)
 - [Type](docs/Type.md)
 - [UserAction](docs/UserAction.md)
 - [VLAN](docs/VLAN.md)
 - [VLANGroup](docs/VLANGroup.md)
 - [VRF](docs/VRF.md)
 - [VirtualChassis](docs/VirtualChassis.md)
 - [VirtualMachine](docs/VirtualMachine.md)
 - [VirtualMachineIPAddress](docs/VirtualMachineIPAddress.md)
 - [VirtualMachineWithConfigContext](docs/VirtualMachineWithConfigContext.md)
 - [VirtualizationClusterGroupsList200Response](docs/VirtualizationClusterGroupsList200Response.md)
 - [VirtualizationClusterTypesList200Response](docs/VirtualizationClusterTypesList200Response.md)
 - [VirtualizationClustersList200Response](docs/VirtualizationClustersList200Response.md)
 - [VirtualizationVirtualMachinesList200Response](docs/VirtualizationVirtualMachinesList200Response.md)
 - [Width](docs/Width.md)
 - [WritableAggregate](docs/WritableAggregate.md)
 - [WritableCircuit](docs/WritableCircuit.md)
 - [WritableCircuitTermination](docs/WritableCircuitTermination.md)
 - [WritableCluster](docs/WritableCluster.md)
 - [WritableConfigContext](docs/WritableConfigContext.md)
 - [WritableConsolePort](docs/WritableConsolePort.md)
 - [WritableConsolePortTemplate](docs/WritableConsolePortTemplate.md)
 - [WritableConsoleServerPort](docs/WritableConsoleServerPort.md)
 - [WritableConsoleServerPortTemplate](docs/WritableConsoleServerPortTemplate.md)
 - [WritableDevice](docs/WritableDevice.md)
 - [WritableDeviceBay](docs/WritableDeviceBay.md)
 - [WritableDeviceBayTemplate](docs/WritableDeviceBayTemplate.md)
 - [WritableDeviceType](docs/WritableDeviceType.md)
 - [WritableGraph](docs/WritableGraph.md)
 - [WritableIPAddress](docs/WritableIPAddress.md)
 - [WritableInterface](docs/WritableInterface.md)
 - [WritableInterfaceConnection](docs/WritableInterfaceConnection.md)
 - [WritableInterfaceTemplate](docs/WritableInterfaceTemplate.md)
 - [WritableInventoryItem](docs/WritableInventoryItem.md)
 - [WritablePlatform](docs/WritablePlatform.md)
 - [WritablePowerOutlet](docs/WritablePowerOutlet.md)
 - [WritablePowerOutletTemplate](docs/WritablePowerOutletTemplate.md)
 - [WritablePowerPort](docs/WritablePowerPort.md)
 - [WritablePowerPortTemplate](docs/WritablePowerPortTemplate.md)
 - [WritablePrefix](docs/WritablePrefix.md)
 - [WritableRack](docs/WritableRack.md)
 - [WritableRackGroup](docs/WritableRackGroup.md)
 - [WritableRackReservation](docs/WritableRackReservation.md)
 - [WritableRegion](docs/WritableRegion.md)
 - [WritableSecret](docs/WritableSecret.md)
 - [WritableService](docs/WritableService.md)
 - [WritableSite](docs/WritableSite.md)
 - [WritableTenant](docs/WritableTenant.md)
 - [WritableTopologyMap](docs/WritableTopologyMap.md)
 - [WritableVLAN](docs/WritableVLAN.md)
 - [WritableVLANGroup](docs/WritableVLANGroup.md)
 - [WritableVRF](docs/WritableVRF.md)
 - [WritableVirtualChassis](docs/WritableVirtualChassis.md)
 - [WritableVirtualMachine](docs/WritableVirtualMachine.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Bearer"></a>
### Bearer

- **Type**: API key
- **API key parameter name**: Authorization
- **Location**: HTTP header


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author

netbox@digitalocean.com

